SAPO Intranet production settings

--- a/app/views/layouts/_intranet_bar.html.haml
+++ b/app/views/layouts/_intranet_bar.html.haml
@@ -1,8 +1,8 @@
-<!-- ko module: {name: 'IntraBar', data: {intraBaseDomain: 'https://staging.intra.sapo.pt', mainContentId: 'gitlabApp'}} --><!-- /ko -->
-%script{:type => "text/javascript", :src => "//staging.intra.sapo.pt/static/libs/ink-all.js"}
-%script{:type => "text/javascript", :src => "//staging.intra.sapo.pt/static/libs/pink.min.js"}
-%script{:type => "text/javascript", :src => "//staging.intra.sapo.pt/static/libs/pink-tpl-bundle.js"}
-%script{:type => "text/javascript", :src => "//staging.intra.sapo.pt/intrabar/translations"}
-%script{:type => "text/javascript", :src => "//staging.intra.sapo.pt/static/intrabar-bundle.min.js"}
+<!-- ko module: {name: 'IntraBar', data: {intraBaseDomain: 'https://intra.sapo.pt', mainContentId: 'gitlabApp'}} --><!-- /ko -->
+%script{:type => "text/javascript", :src => "//intra.sapo.pt/static/libs/ink-all.js"}
+%script{:type => "text/javascript", :src => "//intra.sapo.pt/static/libs/pink.min.js"}
+%script{:type => "text/javascript", :src => "//intra.sapo.pt/static/libs/pink-tpl-bundle.js"}
+%script{:type => "text/javascript", :src => "//intra.sapo.pt/intrabar/translations"}
+%script{:type => "text/javascript", :src => "//intra.sapo.pt/static/intrabar-bundle.min.js"}
 :javascript
   initIntraBar();
