--- a/app/views/layouts/_intranet_bar_css.html.haml
+++ b/app/views/layouts/_intranet_bar_css.html.haml
@@ -1,6 +1,6 @@
-<link rel="stylesheet" href="//staging.intra.sapo.pt/static/content/css/ink-flex.min.css">
-<link rel="stylesheet" href="//staging.intra.sapo.pt/static/content/css/symbol-font.min.css">
-<link rel="stylesheet" href="//staging.intra.sapo.pt/static/content/css/font-awesome.min.css">
-<link rel="stylesheet" href="//staging.intra.sapo.pt/static/content/css/pink.min.css">
-<link rel="stylesheet" href="//staging.intra.sapo.pt/static/content/css/topbar.min.css">
+<link rel="stylesheet" href="//intra.sapo.pt/static/content/css/ink-flex.min.css">
+<link rel="stylesheet" href="//intra.sapo.pt/static/content/css/symbol-font.min.css">
+<link rel="stylesheet" href="//intra.sapo.pt/static/content/css/font-awesome.min.css">
+<link rel="stylesheet" href="//intra.sapo.pt/static/content/css/pink.min.css">
+<link rel="stylesheet" href="//intra.sapo.pt/static/content/css/topbar.min.css">
 <style>#gitlabApp>header.navbar-static-top {z-index: 0;}</style>
